fix styles wrap cards

--- a/src/assets/less/elements/projects-wrap.less
+++ b/src/assets/less/elements/projects-wrap.less
@@ -1,12 +1,12 @@
 .projects-wrap {
-  &__header {
+  .projects-wrap__header {
     padding-bottom: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
-  &__title {
+  .projects-wrap__title {
     display: none;
     font-size: 18px;
     color: rgba(51, 51, 51, .5);
@@ -16,12 +16,12 @@
     }
   }
 
-  &__body {
+  .projects-wrap__body {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 
-    &__item {
+    .project-wrap__item {
       width: 100%;
 
       &:nth-last-child(n+2) {
